[wip] Start implementation of APASE export